# otus-cpp-basics

./: CMakeLists.txt  README.md  hello_world.cpp  move_me_out.cpp  move_me_out.h
homework3_guess_name/: CMakeLists.txt  check_value.cpp  check_value.h  guess_the_number.cpp  print_table_score.cpp  print_table_score.h
homework3_guess_name/random_value/: CMakeLists.txt  random_value.cpp  random_value.h
homework4_classes/: Ball.cpp  Ball.hpp  Velocity.hpp  World.cpp  World.hpp
homework5/: statistics.cpp
homework5_statistical_sequence/: statistics.cpp
